# odeer

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/app/: app.cpp  app.hpp  app_events.cpp  app_events.hpp  key_codes.hpp
src/math/: math.hpp
src/renderer/api/: buffer_layout.hpp  index_buffer.cpp  index_buffer.hpp  render_api.cpp  render_api.hpp  render_context.cpp  render_context.hpp  render_core.cpp  render_core.hpp  render_utils.cpp  render_utils.hpp  shader.cpp  shader.hpp  shader_data.cpp  shader_data.hpp  texture.cpp  texture.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp
src/utils/: macros.hpp  utils.hpp
src/window/: window.hpp
src/window/internal/: sdl_window.cpp  sdl_window.hpp
